add supported versions to N&N

--- a/new/new.html
+++ b/new/new.html
@@ -82,6 +82,17 @@
 			target="_new"><b>Eclipse 3.8, 4.3 or 4.4</b></a>. See the <a href="/mylyn/downloads/">download
 			page</a> for repository locations.
 	</p>
+	
+	<h3>Supported Repository Versions</h3>
+	<div style="font-size: small;">
+	Connectors included in Mylyn 3.15 support the following repository versions:
+	<ul>
+	<li>Bugzilla 4.0 - 4.4.8, 5.0rc2</li>
+	<li>Gerrit 2.6 - 2.9.4</li>
+	<li>Hudson 3.0 - 3.2.1</li>
+	<li>Jenkins 1.509 - 1.580</li>
+	</ul>
+	</div>
 	<hr size="1" />
 
 
