--- a/new/new.html
+++ b/new/new.html
@@ -7,6 +7,8 @@
 					color="#FFFFFF" size="1">Release</font></b></td>
 			<td bgcolor="#595791" width="5%" align="center"><b> <font
 					color="#FFFFFF" size="1">Resolved </font></b></td>
+			<td bgcolor="#595791" width="5%" align="center"><b> <font
+					color="#FFFFFF" size="1">Merged </font></b></td>
 			<td bgcolor="#595791" width="*" align="center"><b> <font
 					color="#FFFFFF" size="1">Community Contributions</font></b></td>
 		</tr>
@@ -15,6 +17,12 @@
 			<td bgcolor="#EFEFEF" align="center"><a
 				href="https://projects.eclipse.org/projects/mylyn/releases/3.15/plan">
 					<font size="1">41</font><br> <font size="1">bugs</font>
+			</a></td>
+			<td bgcolor="#EFEFEF" align="center"><a
+				href="https://git.eclipse.org/r/#/q/mylyn/+status:merged+after:%222014-12-11+14:12:00+-0800%22+
+				%28%28branch:master+before:2015-03-13%29+OR+%28branch:e_4_4_m_3_15_x+before:2015-04-30%29+OR+
+				%28branch:master+before:2015-03-17+project:mylyn/org.eclipse.mylyn.docs%29%29,75">
+					<font size="1">100</font><br> <font size="1">reviews</font>
 			</a></td>
 			<td bgcolor="#EFEFEF"><font size="1">Community contributions were
 					provided by Mat Booth, Nicholas Folk, Doug Janzen, and Stephan Wahlbrink. <br>Includes:
