465143: [release] release Mylyn 3.16
Change-Id: I3ce9bd2c0830c9cb895ab50403ba11da072542ce
Task-Url: https://bugs.eclipse.org/bugs/show_bug.cgi?id=465143

--- a/new/new.html
+++ b/new/new.html
@@ -13,43 +13,43 @@
 					color="#FFFFFF" size="1">Community Contributions</font></b></td>
 		</tr>
 		<tr>
-			<td bgcolor="#EFEFEF"><font size="1">3.15<br> <i>April 10, 2015</i></font></td>
+			<td bgcolor="#EFEFEF"><font size="1">3.16<br> <i>June 24, 2015</i></font></td>
 			<td bgcolor="#EFEFEF" align="center"><a
-				href="https://projects.eclipse.org/projects/mylyn/releases/3.15/plan">
-					<font size="1">41</font><br> <font size="1">bugs</font>
+				href="https://projects.eclipse.org/projects/mylyn/releases/3.16/plan">
+					<font size="1">40</font><br> <font size="1">bugs</font>
 			</a></td>
 			<td bgcolor="#EFEFEF" align="center"><a
-				href="https://git.eclipse.org/r/#/q/mylyn/+status:merged+after:%222014-12-11+14:12:00+-0800%22+
-				%28%28branch:master+before:2015-03-13%29+OR+%28branch:e_4_4_m_3_15_x+before:2015-04-30%29+OR+
-				%28branch:master+before:2015-03-17+project:mylyn/org.eclipse.mylyn.docs%29%29,75">
-					<font size="1">100</font><br> <font size="1">reviews</font>
+				href="https://git.eclipse.org/r/#/q/mylyn/+status:merged+after:%222015-03-16+13:00:00+-0800
+				%22+%28%28branch:master+before:2015-06-04%29+OR+%28branch:e_4_4_m_3_16_x+before:2015-06-24%29%29">
+					<font size="1">140</font><br> <font size="1">reviews</font>
 			</a></td>
 			<td bgcolor="#EFEFEF"><font size="1">Community contributions were
-					provided by Mat Booth, Nicholas Folk, Doug Janzen, and Stephan Wahlbrink. <br>Includes:
+					provided by Mat Booth, Myles Feichtinger, Chris Poon, and Nicholas Folk. <br>Includes:
 					<a
-					href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn;target_milestone=3.15">Mylyn
-						3.15</a>, <a
-					href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Builds;target_milestone=1.7">Mylyn
-						Builds 1.7</a>, <a
-					href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Commons;target_milestone=3.15">Mylyn
-						Commons 3.15</a>, <a
-					href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Context;target_milestone=3.15">Mylyn
-						Context 3.15</a>, <a
-					href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Docs;target_milestone=2.4">Mylyn
-						Docs 2.4</a>, <a
-					href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Reviews;target_milestone=2.6">Mylyn
-						Reviews 2.6</a>. <a
-					href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Tasks;target_milestone=3.15">Mylyn
-						Tasks 3.15</a>, <a
-					href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Versions;target_milestone=1.7">Mylyn
-						Versions 1.7</a>.
+					href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn;target_milestone=3.16">Mylyn
+						3.16</a>, <a
+					href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Builds;target_milestone=1.8">Mylyn
+						Builds 1.8</a>, <a
+					href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Commons;target_milestone=3.16">Mylyn
+						Commons 3.16</a>, <a
+					href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Context;target_milestone=3.16">Mylyn
+						Context 3.16</a>, <a
+					href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Docs;target_milestone=2.5">Mylyn
+						Docs 2.5</a>, <a
+					href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Reviews;target_milestone=2.7">Mylyn
+						Reviews 2.7</a>. <a
+					href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Tasks;target_milestone=3.16">Mylyn
+						Tasks 3.16</a>, <a
+					href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Versions;target_milestone=1.8">Mylyn
+						Versions 1.8</a>.
 			</font></td>
 		</tr>
 	</table>
 
 	<p>
 		<b>Also see the New &amp; Noteworthy for: <a
-			href="http://eclipse.org/mylyn/new/new-3.13.html">Mylyn 3.14</a>, <a
+			href="http://eclipse.org/mylyn/new/new-3.15.html">Mylyn 3.15</a>, <a
+			href="http://eclipse.org/mylyn/new/new-3.14.html">Mylyn 3.14</a>, <a
 			href="http://eclipse.org/mylyn/new/new-3.13.html">Mylyn 3.13</a>, <a
 			href="http://eclipse.org/mylyn/new/new-3.12.html">Mylyn 3.12</a>, <a
 			href="http://eclipse.org/mylyn/new/new-3.11.html">Mylyn 3.11</a>, <a
@@ -70,54 +70,54 @@
 	<hr size="1" />
 
 	<p>
-		<b>NOTE:</b> Mylyn 3.15 requires <a
-			href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=383907"
-			target="_new"><b>Java 1.6 or later</b></a> and supports <a
-			href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=412708"
-			target="_new"><b>Eclipse 3.8, 4.3 or 4.4</b></a>. See the <a href="/mylyn/downloads/">download
+		<b>NOTE:</b> Mylyn 3.16 requires <a
+			href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=423848"
+			target="_new"><b>Java 1.7 or later</b></a> and supports <a
+			href="https://wiki.eclipse.org/Mylyn_Integrator_Reference#Deciding_on_a_version"
+			target="_new"><b>Eclipse 3.8, 4.4 or 4.5</b></a>. See the <a href="/mylyn/downloads/">download
 			page</a> for repository locations.
 	</p>
 	
 	<h3>Supported Repository Versions</h3>
 	<div style="font-size: small;">
-	Connectors included in Mylyn 3.15 support the following repository versions:
+	Connectors included in Mylyn 3.16 support the following repository versions:
 	<ul>
-	<li>Bugzilla 4.0 - 4.4.8, 5.0rc2</li>
-	<li>Gerrit 2.6 - 2.9.4</li>
-	<li>Hudson 3.0 - 3.2.1</li>
-	<li>Jenkins 1.509 - 1.580</li>
+	<li>Bugzilla 4.0 - 4.4.9, 5.0rc3</li>
+	<li>Gerrit 2.9.4 - 2.11</li>
+	<li>Hudson 3.0 - 3.2.2</li>
+	<li>Jenkins 1.509 - 1.596</li>
 	</ul>
 	</div>
 	<hr size="1" />
 
 
-	<h1>New	in Mylyn 3.15</h1>
-
-
+	<h1>New	in Mylyn 3.16</h1>
 
 	<ul>
+		<li><a href="#context">Context</a></li>
+		<li><a href="#notifications">Notifications</a></li>
 		<li><a href="#gerrit">Gerrit Connector</a></li>
+		<li><a href="#builds">Hudson/Jenkins Connector</a></li>
 		<li><a href="#bugzilla">Bugzilla Connector</a></li>
 		<li><a href="#framework">Framework and API</a></li>
 	</ul>
 
 	<h2>
-		<a name="gerrit">Gerrit Connector</a>
+		<a name="context">Context</a>
 	</h2>
-
 	<table cellpadding="10" style="border-spacing: 5px 0px; border-collapse: separate;"width="100%">
 		<tr>
 			<td align="left" valign="top" width="15%" bgcolor="#3D355C" style="color:white;  padding-right: 5px;">
 				<p align="right">
-					<b>Cherry-Pick Commits</b>
+					<b>Cancel Context Switch</b>
 				</p>
 			</td>
 			<td valign="top" width="85%">
-				<p align="left">The Gerrit connector supports cherry-picking
-					changes to another branch, and reviews display their branch in the
-					header of the attributes section.</p>
+				<p align="left">When deactivating a task with unsaved editors, you are prompted to save the editors 
+				or cancel the context switch. This gives you the opportunity to inspect the changes and decide whether to save them
+				before the task	is deactivated.</p>
 				<p>
-					<img border="0" src="images/3.15/cherry-pick.png" />
+					<img border="0" src="images/3.16/deactivate.png" />
 				</p>
 			</td>
 		</tr>
@@ -129,39 +129,121 @@
 		<tr>
 			<td align="left" valign="top" width="15%" bgcolor="#3D355C" style="color:white;  padding-right: 5px;">
 				<p align="right">
-					<b>Parent Commits</b>
+					<b>Restore Task Editor</b>
 				</p>
 			</td>
 			<td valign="top" width="85%">
-				<p align="left">The patch set section has been redesigned to use
-					a 2 column layout that shows the parent commit of each patch set.
-					Hyperlinking allows the parent commit to be opened in the EGit
-					commit editor.</p>
-				<p>
-					<img border="0" src="images/3.15/patch-sets.png" />
-				</p>
-			</td>
-		</tr>
-		<tr>
-			<td colspan="2">
-				<hr size="1" />
-			</td>
-		</tr>
-		<tr>
-			<td align="left" valign="top" width="15%" bgcolor="#3D355C" style="color:white;  padding-right: 5px;">
-				<p align="right">
-					<b>Reuse compare editors</b>
-				</p>
-			</td>
-			<td valign="top" width="85%">
-				<p align="left">The Gerrit connector reuses open compare editors
-					instead of opening duplicate editors when opening a file from the
-					patch sets section or the review navigator, and when comparing
-					patch sets.</p>
+				<p align="left">When deactivating a task, if the task's editor is open, it will be restored 
+				when the task is reactivated.</p>
 			</td>
 		</tr>
 	</table>
 	
+	
+	<h2>
+		<a name="notifications">Notifications</a>
+	</h2>
+	<table cellpadding="10" style="border-spacing: 5px 0px; border-collapse: separate;"width="100%">
+		<tr>
+			<td align="left" valign="top" width="15%" bgcolor="#3D355C" style="color:white;  padding-right: 5px;">
+				<p align="right">
+					<b>Dark Theme</b>
+				</p>
+			</td>
+			<td valign="top" width="85%">
+				<p align="left">Notification popups have improved support for themes, including the dark theme. 
+				The notification background gradient colours are now chosen based on the theme.</p>
+				<p>
+					<img border="0" src="images/3.16/notification.png" />
+				</p>
+			</td>
+		</tr>
+		<tr>
+			<td colspan="2">
+				<hr size="1" />
+			</td>
+		</tr>
+		<tr>
+			<td align="left" valign="top" width="15%" bgcolor="#3D355C" style="color:white;  padding-right: 5px;">
+				<p align="right">
+					<b>Notifications Preference Page</b>
+				</p>
+			</td>
+			<td valign="top" width="85%">
+				<p align="left">The notifications preference page has been moved from the Mylyn preference 
+				category to the General category.</p>
+			</td>
+		</tr>
+	</table>
+
+	<h2>
+		<a name="gerrit">Gerrit Connector</a>
+	</h2>
+	<table cellpadding="10" style="border-spacing: 5px 0px; border-collapse: separate;"width="100%">
+		<tr>
+			<td align="left" valign="top" width="15%" bgcolor="#3D355C" style="color:white;  padding-right: 5px;">
+				<p align="right">
+					<b>File Links</b>
+				</p>
+			</td>
+			<td valign="top" width="85%">
+				<p align="left">The Gerrit connector has improved handling for links to individual files on a review. When a link
+				is clicked, the corresponding patch set will be expanded in the review editor and the patch set contents will be 
+				downloaded. If the patch set has already been downloaded, the compare editor will open.</p>
+			</td>
+		</tr>
+		<tr>
+			<td colspan="2">
+				<hr size="1" />
+			</td>
+		</tr>
+		<tr>
+			<td align="left" valign="top" width="15%" bgcolor="#3D355C" style="color:white;  padding-right: 5px;">
+				<p align="right">
+					<b>Gerrit 2.10 and 2.11</b>
+				</p>
+			</td>
+			<td valign="top" width="85%">
+				<p align="left">Gerrit 2.10 and 2.11 are now supported. Support for versions earlier than 2.9 has been removed.</p>
+			</td>
+		</tr>
+	</table>
+	
+
+	<p>&nbsp;</p>
+	<h2>
+		<a name="builds">Hudson/Jenkins Connector</a>
+	</h2>
+	<table cellpadding="10" style="border-spacing: 5px 0px; border-collapse: separate;"width="100%">
+		<tr>
+			<td align="left" valign="top" width="15%" bgcolor="#3D355C" style="color:white;  padding-right: 5px;">
+				<p align="right">
+					<b>Hide Succeeding</b>
+				</p>
+			</td>
+			<td valign="top" width="85%">
+				<p align="left">The builds view allows you to hide suceeding build plans so you can focus on failures.</p>
+				<p>
+					<img border="0" src="images/3.16/builds.png" />
+				</p>
+			</td>
+		</tr>
+		<tr>
+			<td colspan="2">
+				<hr size="1" />
+			</td>
+		</tr>
+		<tr>
+			<td align="left" valign="top" width="15%" bgcolor="#3D355C" style="color:white;  padding-right: 5px;">
+				<p align="right">
+					<b>Hudson 3.2.2 and Jenkins 1.596.2</b>
+				</p>
+			</td>
+			<td valign="top" width="85%">
+				<p align="left">Hudson 3.2.2 and Jenkins 1.596.2 are now supported</p>
+			</td>
+		</tr>
+	</table>
 
 	<p>&nbsp;</p>
 	<h2>
@@ -171,34 +253,14 @@
 		<tr>
 			<td align="left" valign="top" width="15%" bgcolor="#3D355C" style="color:white;  padding-right: 5px;">
 				<p align="right">
-					<b>See Also</b>
+					<b>Bugzilla 5.0rc3, 4.4.9, 4.2.14, and 4.0.18</b>
 				</p>
 			</td>
 			<td valign="top" width="85%">
-				<p align="left">The Bugzilla connector now supports the See Also field.</p>
-				<p>
-					<img border="0" src="images/3.15/see-also.png" />
-				</p>
-			</td>
-		</tr>
-		<tr>
-			<td colspan="2">
-				<hr size="1" />
-			</td>
-		</tr>
-		<tr>
-			<td align="left" valign="top" width="15%" bgcolor="#3D355C" style="color:white;  padding-right: 5px;">
-				<p align="right">
-					<b>Bugzilla 5.0rc2, 4.4.8, 4.2.13, and 4.0.17</b>
-				</p>
-			</td>
-			<td valign="top" width="85%">
-				<p align="left">
-				Bugzilla 5.0rc2, 4.4.8, 4.2.13, and 4.0.17 are now supported.</p>
+				<p align="left">Bugzilla 5.0rc3, 4.4.9, 4.2.14, and 4.0.18 are now supported.</p>
 			</td>
 		</tr>
 	</table>
-
 
 	<p>&nbsp;</p>
 	<h2>
@@ -207,7 +269,7 @@
 
 	<p>
 		See <a
-			href="https://wiki.eclipse.org/Mylyn/Porting_Guide#Changes_in_3.15"
+			href="https://wiki.eclipse.org/Mylyn/Porting_Guide#Changes_in_3.16"
 			target="_new">porting guide</a> for additional notes on API changes.
 	</p>
 
@@ -215,16 +277,32 @@
 		<tr>
 			<td align="left" valign="top" width="15%" bgcolor="#3D355C" style="color:white;  padding-right: 5px;">
 				<p align="right">
-					<b>Tasks: Owner ID added to ITask</b>
+					<b>Tasks: Connectors listed under multiple brands</b>
 				</p>
 			</td>
 			<td valign="top" width="85%">
-				<p align="left">To better support connectors which provide options for person fields, <tt>ITask</tt> now provides 
-				<tt>getOwnerId</tt> and <tt>setOwnerId</tt> methods, and <tt>ITaskMapping</tt> provides a 
-				<tt>getOwnerId</tt> method. See <a
-						href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=446091">bug
-						446091</a>
+				<p align="left">Connectors can be listed multiple times under different brands, using different labels and icons, by
+				implementing the new methods in <tt>RepositoryConnectorBranding</tt>.
+				See <a
+						href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=467045">bug
+						467045</a>.
 				</p>
+			</td>
+		</tr>
+		<tr>
+			<td colspan="2">
+			<hr size="1"/>
+			</td>
+		</tr>
+		<tr>
+			<td align="left" valign="top" width="15%" bgcolor="#3D355C" style="color:white;  padding-right: 5px;">
+				<p align="right">
+					<b>Tasks: Prevent task deactivation</b>
+				</p>
+			</td>
+			<td valign="top" width="85%">
+				<p align="left">A <tt>boolean shouldDeactivateTask(ITask)</tt> method has been added to
+				 <tt>TaskActivationAdapter</tt>. See <a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=334937">bug 334937</a>.</p>
 			</td>
 		</tr>
 	</table>
