--- a/new/new.html
+++ b/new/new.html
@@ -95,6 +95,7 @@
 
 	<ul>
 		<li><a href="#context">Context</a></li>
+		<li><a href="#cvs">CVS</a></li>
 		<li><a href="#notifications">Notifications</a></li>
 		<li><a href="#gerrit">Gerrit Connector</a></li>
 		<li><a href="#builds">Hudson/Jenkins Connector</a></li>
@@ -135,6 +136,24 @@
 			<td valign="top" width="85%">
 				<p align="left">When deactivating a task, if the task's editor is open, it will be restored 
 				when the task is reactivated.</p>
+			</td>
+		</tr>
+	</table>
+
+	<h2>
+		<a name="cvs">CVS</a>
+	</h2>
+	<table cellpadding="10" style="border-spacing: 5px 0px; border-collapse: separate;"width="100%">
+		<tr>
+			<td align="left" valign="top" width="15%" bgcolor="#3D355C" style="color:white;  padding-right: 5px;">
+				<p align="right">
+					<b>CVS Support</b>
+				</p>
+			</td>
+			<td valign="top" width="85%">
+				<p align="left">Automatic commit message generation for CVS has been moved to a separate
+					feature. When upgrading, CVS users will need to install an additional feature, <i>Mylyn Context Connector: CVS
+					Support</i> (<tt>org.eclipse.mylyn.team.cvs)</tt>.</p>
 			</td>
 		</tr>
 	</table>
