--- a/new/new.html
+++ b/new/new.html
@@ -152,8 +152,12 @@
 			</td>
 			<td valign="top" width="85%">
 				<p align="left">Automatic commit message generation for CVS has been moved to a separate
-					feature. When upgrading, CVS users will need to install an additional feature, <i>Mylyn Context Connector: CVS
-					Support</i> (<tt>org.eclipse.mylyn.team.cvs)</tt>.</p>
+					feature. When upgrading, CVS users will need to install an additional feature,
+					<i>Mylyn Context Connector: CVS Support</i> (
+					<tt>org.eclipse.mylyn.team.cvs)</tt>
+					, from the Mylyn update site,
+					<nobr>http://download.eclipse.org/mylyn/releases/latest</nobr>.
+				</p>
 			</td>
 		</tr>
 	</table>
