471058: [release] release Mylyn 3.17
Change-Id: Icef6a792d1ae9b53ccba34f58ff82488428f5880
Task-Url: https://bugs.eclipse.org/bugs/show_bug.cgi?id=471058

--- a/new/new.html
+++ b/new/new.html
@@ -13,41 +13,39 @@
 					color="#FFFFFF" size="1">Community Contributions</font></b></td>
 		</tr>
 		<tr>
-			<td bgcolor="#EFEFEF"><font size="1">3.16<br> <i>June 24, 2015</i></font></td>
+			<td bgcolor="#EFEFEF"><font size="1">3.17<br> <i>October 2, 2015</i></font></td>
 			<td bgcolor="#EFEFEF" align="center"><a
-				href="https://projects.eclipse.org/projects/mylyn/releases/3.16/plan">
-					<font size="1">40</font><br> <font size="1">bugs</font>
+				href="https://projects.eclipse.org/projects/mylyn/releases/3.17/plan">
+					<font size="1">47</font><br> <font size="1">bugs</font>
 			</a></td>
-			<td bgcolor="#EFEFEF" align="center"><a
-				href="https://git.eclipse.org/r/#/q/mylyn/+status:merged+after:%222015-03-16+13:00:00+-0800
-				%22+%28%28branch:master+before:2015-06-04%29+OR+%28branch:e_4_4_m_3_16_x+before:2015-06-24%29%29">
-					<font size="1">140</font><br> <font size="1">reviews</font>
-			</a></td>
+			<td bgcolor="#EFEFEF" align="center"></td>
 			<td bgcolor="#EFEFEF"><font size="1">Community contributions were
-					provided by Mat Booth, Myles Feichtinger, Chris Poon, and Nicholas Folk. <br>Includes:
+					provided by Max Rydahl Andersen, Jeremie Bresson, Jaxsun McCarthy Huggan, James Kennedy, Chris Poon, and Kenneth Poon.
+					<br>Includes:
 					<a
-					href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn;target_milestone=3.16">Mylyn
-						3.16</a>, <a
-					href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Builds;target_milestone=1.8">Mylyn
-						Builds 1.8</a>, <a
-					href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Commons;target_milestone=3.16">Mylyn
-						Commons 3.16</a>, <a
-					href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Context;target_milestone=3.16">Mylyn
-						Context 3.16</a>, <a
-					href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Docs;target_milestone=2.5">Mylyn
-						Docs 2.5</a>, <a
-					href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Reviews;target_milestone=2.7">Mylyn
-						Reviews 2.7</a>. <a
-					href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Tasks;target_milestone=3.16">Mylyn
-						Tasks 3.16</a>, <a
-					href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Versions;target_milestone=1.8">Mylyn
-						Versions 1.8</a>.
+					href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn;target_milestone=3.17">Mylyn
+						3.17</a>, <a
+					href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Builds;target_milestone=1.9">Mylyn
+						Builds 1.9</a>, <a
+					href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Commons;target_milestone=3.17">Mylyn
+						Commons 3.17</a>, <a
+					href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Context;target_milestone=3.17">Mylyn
+						Context 3.17</a>, <a
+					href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Docs;target_milestone=2.6">Mylyn
+						Docs 2.6</a>, <a
+					href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Reviews;target_milestone=2.8">Mylyn
+						Reviews 2.8</a>. <a
+					href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Tasks;target_milestone=3.17">Mylyn
+						Tasks 3.17</a>, <a
+					href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Versions;target_milestone=1.9">Mylyn
+						Versions 1.9</a>.
 			</font></td>
 		</tr>
 	</table>
 
 	<p>
 		<b>Also see the New &amp; Noteworthy for: <a
+			href="http://eclipse.org/mylyn/new/new-3.15.html">Mylyn 3.16</a>, <a
 			href="http://eclipse.org/mylyn/new/new-3.15.html">Mylyn 3.15</a>, <a
 			href="http://eclipse.org/mylyn/new/new-3.14.html">Mylyn 3.14</a>, <a
 			href="http://eclipse.org/mylyn/new/new-3.13.html">Mylyn 3.13</a>, <a
@@ -70,7 +68,7 @@
 	<hr size="1" />
 
 	<p>
-		<b>NOTE:</b> Mylyn 3.16 requires <a
+		<b>NOTE:</b> Mylyn 3.17 requires <a
 			href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=423848"
 			target="_new"><b>Java 1.7 or later</b></a> and supports <a
 			href="https://wiki.eclipse.org/Mylyn_Integrator_Reference#Deciding_on_a_version"
@@ -80,255 +78,24 @@
 	
 	<h3>Supported Repository Versions</h3>
 	<div style="font-size: small;">
-	Connectors included in Mylyn 3.16 support the following repository versions:
+	Connectors included in Mylyn 3.17 support the following repository versions:
 	<ul>
-	<li>Bugzilla 4.0 - 4.4.9, 5.0rc3</li>
-	<li>Gerrit 2.9.4 - 2.11</li>
-	<li>Hudson 3.0 - 3.2.2</li>
-	<li>Jenkins 1.509 - 1.596</li>
+	<li>Bugzilla 4.0 - 4.4.10, 5.0.1</li>
+	<li>Gerrit 2.9.4 - 2.11.3</li>
+	<li>Hudson 3.0 - 3.3.0</li>
+	<li>Jenkins 1.509 - 1.609</li>
 	</ul>
 	</div>
 	<hr size="1" />
 
 
-	<h1>New	in Mylyn 3.16</h1>
+	<h1>New	in Mylyn 3.17</h1>
 
-	<ul>
-		<li><a href="#context">Context</a></li>
-		<li><a href="#cvs">CVS</a></li>
-		<li><a href="#notifications">Notifications</a></li>
-		<li><a href="#gerrit">Gerrit Connector</a></li>
-		<li><a href="#builds">Hudson/Jenkins Connector</a></li>
-		<li><a href="#bugzilla">Bugzilla Connector</a></li>
-		<li><a href="#framework">Framework and API</a></li>
-	</ul>
-
-	<h2>
-		<a name="context">Context</a>
-	</h2>
-	<table cellpadding="10" style="border-spacing: 5px 0px; border-collapse: separate;"width="100%">
-		<tr>
-			<td align="left" valign="top" width="15%" bgcolor="#3D355C" style="color:white;  padding-right: 5px;">
-				<p align="right">
-					<b>Cancel Context Switch</b>
-				</p>
-			</td>
-			<td valign="top" width="85%">
-				<p align="left">When deactivating a task with unsaved editors, you are prompted to save the editors 
-				or cancel the context switch. This gives you the opportunity to inspect the changes and decide whether to save them
-				before the task	is deactivated.</p>
-				<p>
-					<img border="0" src="images/3.16/deactivate.png" />
-				</p>
-			</td>
-		</tr>
-		<tr>
-			<td colspan="2">
-				<hr size="1" />
-			</td>
-		</tr>
-		<tr>
-			<td align="left" valign="top" width="15%" bgcolor="#3D355C" style="color:white;  padding-right: 5px;">
-				<p align="right">
-					<b>Restore Task Editor</b>
-				</p>
-			</td>
-			<td valign="top" width="85%">
-				<p align="left">When deactivating a task, if the task's editor is open, it will be restored 
-				when the task is reactivated.</p>
-			</td>
-		</tr>
-	</table>
-
-	<h2>
-		<a name="cvs">CVS</a>
-	</h2>
-	<table cellpadding="10" style="border-spacing: 5px 0px; border-collapse: separate;"width="100%">
-		<tr>
-			<td align="left" valign="top" width="15%" bgcolor="#3D355C" style="color:white;  padding-right: 5px;">
-				<p align="right">
-					<b>CVS Support</b>
-				</p>
-			</td>
-			<td valign="top" width="85%">
-				<p align="left">Automatic commit message generation for CVS has been moved to a separate
-					feature. When upgrading, CVS users will need to install an additional feature,
-					<i>Mylyn Context Connector: CVS Support</i> (
-					<tt>org.eclipse.mylyn.team.cvs)</tt>
-					, from the Mylyn update site,
-					<nobr>http://download.eclipse.org/mylyn/releases/latest</nobr>.
-				</p>
-			</td>
-		</tr>
-	</table>
-	
-	
-	<h2>
-		<a name="notifications">Notifications</a>
-	</h2>
-	<table cellpadding="10" style="border-spacing: 5px 0px; border-collapse: separate;"width="100%">
-		<tr>
-			<td align="left" valign="top" width="15%" bgcolor="#3D355C" style="color:white;  padding-right: 5px;">
-				<p align="right">
-					<b>Dark Theme</b>
-				</p>
-			</td>
-			<td valign="top" width="85%">
-				<p align="left">Notification popups have improved support for themes, including the dark theme. 
-				The notification background gradient colours are now chosen based on the theme.</p>
-				<p>
-					<img border="0" src="images/3.16/notification.png" />
-				</p>
-			</td>
-		</tr>
-		<tr>
-			<td colspan="2">
-				<hr size="1" />
-			</td>
-		</tr>
-		<tr>
-			<td align="left" valign="top" width="15%" bgcolor="#3D355C" style="color:white;  padding-right: 5px;">
-				<p align="right">
-					<b>Notifications Preference Page</b>
-				</p>
-			</td>
-			<td valign="top" width="85%">
-				<p align="left">The notifications preference page has been moved from the Mylyn preference 
-				category to the General category.</p>
-			</td>
-		</tr>
-	</table>
-
-	<h2>
-		<a name="gerrit">Gerrit Connector</a>
-	</h2>
-	<table cellpadding="10" style="border-spacing: 5px 0px; border-collapse: separate;"width="100%">
-		<tr>
-			<td align="left" valign="top" width="15%" bgcolor="#3D355C" style="color:white;  padding-right: 5px;">
-				<p align="right">
-					<b>File Links</b>
-				</p>
-			</td>
-			<td valign="top" width="85%">
-				<p align="left">The Gerrit connector has improved handling for links to individual files on a review. When a link
-				is clicked, the corresponding patch set will be expanded in the review editor and the patch set contents will be 
-				downloaded. If the patch set has already been downloaded, the compare editor will open.</p>
-			</td>
-		</tr>
-		<tr>
-			<td colspan="2">
-				<hr size="1" />
-			</td>
-		</tr>
-		<tr>
-			<td align="left" valign="top" width="15%" bgcolor="#3D355C" style="color:white;  padding-right: 5px;">
-				<p align="right">
-					<b>Gerrit 2.10 and 2.11</b>
-				</p>
-			</td>
-			<td valign="top" width="85%">
-				<p align="left">Gerrit 2.10 and 2.11 are now supported. Support for versions earlier than 2.9 has been removed.</p>
-			</td>
-		</tr>
-	</table>
-	
+	Coming Soon!
 
 	<p>&nbsp;</p>
-	<h2>
-		<a name="builds">Hudson/Jenkins Connector</a>
-	</h2>
-	<table cellpadding="10" style="border-spacing: 5px 0px; border-collapse: separate;"width="100%">
-		<tr>
-			<td align="left" valign="top" width="15%" bgcolor="#3D355C" style="color:white;  padding-right: 5px;">
-				<p align="right">
-					<b>Hide Succeeding</b>
-				</p>
-			</td>
-			<td valign="top" width="85%">
-				<p align="left">The builds view allows you to hide suceeding build plans so you can focus on failures.</p>
-				<p>
-					<img border="0" src="images/3.16/builds.png" />
-				</p>
-			</td>
-		</tr>
-		<tr>
-			<td colspan="2">
-				<hr size="1" />
-			</td>
-		</tr>
-		<tr>
-			<td align="left" valign="top" width="15%" bgcolor="#3D355C" style="color:white;  padding-right: 5px;">
-				<p align="right">
-					<b>Hudson 3.2.2 and Jenkins 1.596.2</b>
-				</p>
-			</td>
-			<td valign="top" width="85%">
-				<p align="left">Hudson 3.2.2 and Jenkins 1.596.2 are now supported</p>
-			</td>
-		</tr>
-	</table>
 
-	<p>&nbsp;</p>
-	<h2>
-		<a name="bugzilla">Bugzilla Connector</a>
-	</h2>
-	<table cellpadding="10" style="border-spacing: 5px 0px; border-collapse: separate;"width="100%">
-		<tr>
-			<td align="left" valign="top" width="15%" bgcolor="#3D355C" style="color:white;  padding-right: 5px;">
-				<p align="right">
-					<b>Bugzilla 5.0rc3, 4.4.9, 4.2.14, and 4.0.18</b>
-				</p>
-			</td>
-			<td valign="top" width="85%">
-				<p align="left">Bugzilla 5.0rc3, 4.4.9, 4.2.14, and 4.0.18 are now supported.</p>
-			</td>
-		</tr>
-	</table>
 
-	<p>&nbsp;</p>
-	<h2>
-		<a name="framework">Framework and API</a>
-	</h2>
-
-	<p>
-		See <a
-			href="https://wiki.eclipse.org/Mylyn/Porting_Guide#Changes_in_3.16"
-			target="_new">porting guide</a> for additional notes on API changes.
-	</p>
-
-	<table cellpadding="10" style="border-spacing: 5px 0px; border-collapse: separate;"width="100%">
-		<tr>
-			<td align="left" valign="top" width="15%" bgcolor="#3D355C" style="color:white;  padding-right: 5px;">
-				<p align="right">
-					<b>Tasks: Connectors listed under multiple brands</b>
-				</p>
-			</td>
-			<td valign="top" width="85%">
-				<p align="left">Connectors can be listed multiple times under different brands, using different labels and icons, by
-				implementing the new methods in <tt>RepositoryConnectorBranding</tt>.
-				See <a
-						href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=467045">bug
-						467045</a>.
-				</p>
-			</td>
-		</tr>
-		<tr>
-			<td colspan="2">
-			<hr size="1"/>
-			</td>
-		</tr>
-		<tr>
-			<td align="left" valign="top" width="15%" bgcolor="#3D355C" style="color:white;  padding-right: 5px;">
-				<p align="right">
-					<b>Tasks: Prevent task deactivation</b>
-				</p>
-			</td>
-			<td valign="top" width="85%">
-				<p align="left">A <tt>boolean shouldDeactivateTask(ITask)</tt> method has been added to
-				 <tt>TaskActivationAdapter</tt>. See <a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=334937">bug 334937</a>.</p>
-			</td>
-		</tr>
-	</table>
 
 </body>
 </html>
